UtahLiveDataTest/src/objects/MSPPayment__c.object
<CustomObject>
    <fields>
        <fullName>CatchUp__c</fullName>
        <label>Catch Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSPGrant__c</fullName>
        <label>MSP Grant</label>
        <referenceTo>MSPGrant__c</referenceTo>
        <relationshipLabel>MSP Payments</relationshipLabel>
        <relationshipName>MSP_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MSPPaymentSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSP Payment Schedule</label>
        <referenceTo>MSPPaymentSchedule__c</referenceTo>
        <relationshipLabel>MSP Payments</relationshipLabel>
        <relationshipName>MSP_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayDate__c</fullName>
        <label>Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentOrder__c</fullName>
        <label>Payment Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MSP Payment</label>
    <nameField>
        <label>MSP Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSP Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>